No panel scrollbar for fixed size block in kama.
git-svn-id: http://svn.ckeditor.com/CKEditor/branches/features/adobeair@5616 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/panel.css
+++ b/_source/skins/kama/panel.css
@@ -46,7 +46,7 @@ html.cke_skin_kama_container
 
 body.cke_panel_frame
 {
-	overflow: hidden;
+	overflow: auto;
 }
 
 .cke_panel_frame .cke_label
@@ -151,6 +151,7 @@ li.cke_panel_listItem
 
 .cke_colorblock
 {
+	height: 135px;
 	padding: 3px;
     font-size: 11px;
     font-family: 'Microsoft Sans Serif', Tahoma, Arial, Verdana, Sans-Serif;
